# QwatchCapture

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  README.org  crontab.example  example.cfg  kumawatch.py  kwatch.py  kwcapture.py  kwconf.example  kwtimelapse.py  pyproject.toml  qwatch.py  qwcapture.py  qwconf.example  qwcron.example  qwtimelapse.py
docs/: Makefile
docs/source/: 2to3.rst  conf.py  details.rst  environment.rst  ffmpeg.rst  index.rst  kumawatch.rst  prerequisites.rst  quickstart.rst  qwcapture.rst  qwconf.rst  qwcron.rst  qwtimelapse.rst  usage.rst
docs/source/codes/: kumawatch.rst  kwcapture.rst  kwtimelapse.rst  modules.rst
