[tool.poetry]
name = "kumawatch"
version = "1.5.0"
description = "Qwatch"
authors = ["shotakaha <shotakaha+py@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3"

[tool.poetry.dev-dependencies]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.5.0"
tag_format = "v$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
